<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dream"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <EditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Dream Title Field" />

        <TextView
            android:id="@+id/last_updated_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fulfilled_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fulfilled" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/deferred_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Deferred" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_entries"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <Button
            android:id="@+id/entry_0_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="Conceived" />

        <Button
            android:id="@+id/entry_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="Reflection One" />

        <Button
            android:id="@+id/entry_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="Reflection Two" />

        <Button
            android:id="@+id/entry_3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="Deferred" />

        <Button
            android:id="@+id/entry_4_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="Fulfilled" />
    </LinearLayout>

</LinearLayout>